--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -11,6 +11,7 @@
   "module": "dist/index.mjs",
   "main": "dist/index.js",
   "devDependencies": {
+    "@rollup/plugin-replace": "^6.0.1",
     "@types/node": "^22.7.4"
   },
   "repository": {
